# tormor

./: ChangeLog  Pipfile  README.md  pyproject.toml  setup.py
tests/: test_migrat.py  test_migrate.py
tormor/: __init__.py  cmdline.py  commands.py  connection.py  connections.py  dsn.py  exceptions.py  main_script.py  path_helper.py  runtests.sh  schema.py
tormor/tests/: bootstrap.sh  cleanup.sh  script_file.txt  sql_file_invalid.txt  sql_file_valid.txt  test_connections.py  test_dsn.py  test_path.py  test_run_script.py
tormor/tests/Schema/customer/: 01_customer.sql  03_customer.sql
tormor/tests/Schema/employee/: 01_employee.sql
tormor/tests/Schema/product/: 01_product.sql
tormor/tests/Schema2/customer/: 02_customer.sql
tormor/tests/Schema2/department/: 01_department.sql
