[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "tormor"
author = "Tle Ekkul"
author-email = "e.aryuth@gmail.com"
home-page = "https://github.com/Proteus-tech/tormor"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "psycopg2-binary==2.7.5"
]
requires-python = "~=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "get_version==2.0.3"
]

[tool.flit.scripts]
tormor = "tormor.cmdline:script"
